<resources>
    <string name="app_name">Guernica</string>
    <string name="contact_mail">contact@aguasguernica.com</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>

    <string name="signed_out">Signed Out</string>
    <string name="revoke_access">Revoke Access</string>
    <string name="sign_in_email_cta">Sign In with Email</string>
    <string name="sign_out">Sign Out</string>

    <string name="nav_shifts">Income</string>
    <string name="nav_report">Report</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_product">Catalog</string>
    <string name="nav_workshift">Work Shift</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_admin">Administration</string>
    <string name="nav_help">Help</string>
    <string name="title_activity_settings">Settings</string>

    <string name="delete_account">Close session</string>

    <string name="quantity_fmt">%d</string>
    <string name="income_fmt">$%.0f</string>

    <string name="income">Income</string>
    <string name="sells">Sells</string>

    <string name="qty">#</string>
    <string name="date">Date</string>
    <string name="cost">Cost</string>

    <string name="default_message">Do you agree?</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>

    <string name="shift_dialog">Shift Dialog</string>
    <string name="shift_close_msg">Do you want to close the current shift?</string>

    <string name="sales_instructions">Select the quantities you are selling.</string>
    <string name="sales_error">You have to add products to make an order.</string>

    <string name="main_header">Current Shift</string>
    <string name="sales_header">New Sale</string>
    <string name="shift_header">Shift Details</string>
    <string name="sync_header">Stored Shifts</string>
    <string name="sync_sub_header">Synchronize in order to see charts on our site.</string>
    <string name="report_header">Report</string>
    <string name="report_sub_header">Here you have an overview of your business.</string>
    <string name="product_header">Product Types</string>
    <string name="product_sub_header">These are the products you can sell.</string>
    <string name="product_name">Name</string>
    <string name="product_description">Description</string>
    <string name="product_price">Price</string>
    <string name="workshift_header">Work Shifts</string>
    <string name="workshift_sub_header">These are the shifts in your worplace.</string>
    <string name="edit_workshift_header">Edit Shifts</string>
    <string name="edit_workshift_sub_header">You can edit the shift hours and save them.</string>
    <string name="checkout_header">Income</string>
    <string name="checkout_sub_header">These are the incomes regitered.</string>

    <string name="number_field_error_msg">%s must be a number.</string>
    <string name="product_field_error_msg">You need to provide a %s.</string>

    <string name="product_delete_dialog">Delete Product Type.</string>
    <string name="product_delete_dialog_question">Do you want to delete %s?</string>

    <string name="work_shift_dialog">Update work shifts.</string>
    <string name="work_shift_dialog_question">Do you want to update %d work shifts?</string>

    <string name="work_shift_no_item_selected">Please select at least one item from list</string>


    <string name="order_delete_dialog">Delete Order.</string>
    <string name="order_delete_dialog_question">Do you want to delete order with %d products?</string>

    <string name="average">Average</string>

    <string name="report_summary_avg">Average sale: $%s</string>
    <string name="report_summary_shift">Shift: %s</string>

    <string-array name="product_brand">
        <item>Ciel</item>
        <item>Electropura</item>
        <item>Bonafont</item>
        <item>Otro</item>
    </string-array>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="morning_shift">Morning Shift</string>
    <string name="afternoon_shift">Afternoon Shift</string>
    <string name="nav_shift">Income</string>

    <string name="login_terms">By sign in you agree to Guernica <a href="http://aguasguernica.com">term and conditions</a></string>


    <string name="help_app_version" translatable="false">v1.0.0</string>
    <string name="help_faq" translatable="false">FAQ</string>
    <string name="help_faq_desc">Learn more about Guernica application</string>

    <string name="help_donation">Donations</string>
    <string name="help_donation_desc">Help us keep improving our application</string>

    <string name="help_sample">Sample Data</string>
    <string name="help_sample_desc">Create sample data in order to test the application</string>
    <string name="help_sample_error">You already have sample data</string>
    <string name="help_sample_success">Data has been initialized</string>

    <string name="help_reset">Reset Data</string>
    <string name="help_reset_desc">Errase all data from the application</string>
    <string name="help_reset_error">You have already delete data</string>
    <string name="help_reset_success">Data has been reset</string>

    <string name="reset_dialog">Reset Data</string>
    <string name="reset_dialog_question">Are you sure you want to delete all data from application?</string>

    <string name="sample_dialog">Sample Data</string>
    <string name="sample_dialog_question">Are you sure you want to overwrite data into your application?</string>

    <string name="help_created_by" translatable="false">\u00A9 2016 Crafted with love by</string>

    <string name="faq_url" translatable="false">http://aguasguernica.com/faq</string>
    <string name="donate_url" translatable="false">http://aguasguernica.com/donate</string>
    <string name="wedevelop_url" translatable="false">http://wedevelop.mx</string>

    <string name="sp_sample_data" translatable="false">sp_sample_data</string>
    <string name="report_summary">Average Sells</string>
</resources>
