<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shift"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/nav_shift" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/nav_report" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/nav_product" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_logout" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync_black_24dp"
                android:title="@string/nav_sync" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/nav_help" />
        </menu>
    </item>

</menu>
