<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.wedevelop.guernica.HelpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/card"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/guernica"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="0dp"/>
        <TextView
            android:text="@string/help_app_version"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="4"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/help_faq"
            android:clickable="true"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:text="@string/help_faq"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_faq_desc"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/help_sample"
            android:clickable="true"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:text="@string/help_sample"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_sample_desc"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/help_donations"
            android:clickable="true"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:text="@string/help_donation"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/help_donation_desc"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_wedevelop"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:text="@string/help_created_by"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_gravity="bottom"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/wedevelop_white_trans"
                android:scaleType="centerInside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
