<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:minHeight="300dp"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <!--<LinearLayout-->
        <!--android:background="@color/colorPrimaryLight"-->
        <!--android:minHeight="1dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/qty"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryLight"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/date"
            android:layout_weight="8"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryLight"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sales_price"
            android:text="@string/cost"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryLight"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ListView
        android:id="@+id/order_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</LinearLayout>
