<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.wedevelop.guernica.ProductActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/card_header_fmt"
            android:name="mx.wedevelop.guernica.fragment.CardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/card_header_fmt"/>

        <LinearLayout
            android:id="@+id/product_form"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/product_name_layout"
                android:theme="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:hint="@string/product_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/product_description_layout"
                android:theme="@style/TextLabel"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/product_description"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/product_description" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/product_price_layout"
                android:theme="@style/TextLabel"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/product_price"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/product_price" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/product_list"
            android:background="@drawable/list_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/product_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_anchor="@id/card_header_fmt"
        app:layout_anchorGravity="bottom|end" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/product_submit"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_send_black_24dp"
        app:layout_anchor="@id/product_form"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
